--- a/Leetcode_etc.ipynb
+++ b/Leetcode_etc.ipynb
@@ -4,6 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arrays\n",
+    "\n",
+    "Matrices\n",
+    "\n",
+    "Trees\n",
+    "\n",
+    "Graphs\n",
+    "\n",
+    "Data structures\n",
+    "\n",
+    "Linked Lists\n",
+    "\n",
+    "Dynamic Programming -ish\n",
+    "\n",
+    "Math\n",
+    "\n",
+    "Strings\n",
+    "\n",
+    "SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Arrays"
    ]
   },
@@ -4148,7 +4180,7 @@
     "collapsed": true
    },
    "source": [
-    "# SQL"
+    "<h2 id='sql'>SQL</h2>"
    ]
   },
   {
